[package]
name = "ncv"
version = "0.1.0"
authors = ["Parker Timmerman <parker@parkertimmerman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
clap = "*"
colored = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
reqwest = "*"
url = "*"
